...
<!--            android:textColor="@color/textColor"-->
<!--            android:textAppearance="@style/TextAppearance.Bold"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/tv_desc_login"-->
<!--            app:layout_constraintStart_toStartOf="parent" />-->

<!--        <EditText-->
<!--            android:id="@+id/edtEmail"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_22sdp"-->
<!--            android:layout_marginEnd="@dimen/_24sdp"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/input_username"-->
...
<!--            android:textColor="@color/textColor"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintStart_toStartOf="@+id/textView2"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />-->

<!--        <EditText-->
<!--            android:id="@+id/edtPasword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_22sdp"-->
<!--            android:layout_marginEnd="@dimen/_24sdp"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/input_password"-->
...
