<resources>
    <!--    <string name="app_name">Kampung Marketer</string>-->
    <string name="username">Username</string>
    <string name="input_username">Masukkan Username</string>
    <string name="password">Password</string>
    <string name="input_password">Masukkan Password</string>
    <string name="login">Log In</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kelola_data_kantor">Kelola Data Kantor</string>
    <string name="kelola_data_sdm">Kelola Data Karyawan</string>
    <string name="admin">Admin</string>
    <string name="kehadiran_semua_kantor_hari_ini">Kehadiran semua kantor hari ini</string>
...
